# Simplex

./: CMakeLists.txt  LinalgHelper.cpp  LinalgHelper.h  Problem.cpp  Problem.h  README.md  Simplex.cpp  Simplex.h  SimplexException.h  main.cpp
problems/: interesting.lp  problem1.lp  problem2.lp  problem3.lp  problem4.lp  problem5.lp  problem6.lp
